--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ div span.shop {
     margin-bottom: 20px;
 }
 #hero button {
-    background-image: url("../img/brush\ background.png");
+    background-image: url("/img/brush\ background.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-color: transparent;
@@ -461,7 +461,7 @@ div span.shop {
     -webkit-border-radius: 10px;
 }
 #sm-banner .banner-box:nth-child(1) {
-    background-image: url("../img/PalsBag.jpg");
+    background-image: url("/img/PalsBag.jpg");
 }
 #sm-banner .banner-box:nth-child(2) {
     background-image: url("../img/FlagTback.png");
@@ -542,13 +542,13 @@ div span.shop {
     font-size: 20px;
 }
 #banner3 .banner-box:nth-child(1) {
-    background-image: url("../img/banner3A-overlay.jpg");
+    background-image: url("/img/banner3A-overlay.jpg");
 }
 #banner3 .banner-box:nth-child(2) {
-    background-image: url("../img/New\ collection-overlay.jpg");
+    background-image: url("/img/New\ collection-overlay.jpg");
 }
 #banner3 .banner-box:nth-child(3) {
-    background-image: url("../img/1_org_zoom-overlay.png");
+    background-image: url("/img/1_org_zoom-overlay.png");
 }
 #newsletter {
     margin-top: 50px;
@@ -559,7 +559,7 @@ div span.shop {
     position: relative;
     width: 100%;
     height: 30vh;
-    background-image: url("../img/Keffiah.jpg");
+    background-image: url("/img/Keffiah.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 100% 30vh;
@@ -709,7 +709,7 @@ footer a:hover {
     text-align: center;
     width: 100%;
     height: calc(30vh + 40px);
-    background-image: url("../img/Keffiah.jpg");
+    background-image: url("/img/Keffiah.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 100% calc(30vh + 40px);
